[tool.poetry]
name = "solar-swarm"
version = "0.1.0"
description = ""
authors = ["Reyk Carstens"]

[tool.poetry.dependencies]
python = "^3.8"
empy = "^3.3.4"
catkin-pkg = "^0.4.24"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
